[FE/BE] fix format table Fe